fixed alignment

--- a/cit261/week08/local_storage.css
+++ b/cit261/week08/local_storage.css
@@ -25,6 +25,7 @@ input{
     width: 80%;
 }
 .btns{
+    justify-content: center;
     display: flex;
     margin: 10px auto;
     width: 90%;
@@ -35,7 +36,7 @@ button{
     font-size: 20px;
     text-align: center;
     margin: 5px;
-    padding: 5px;
+    padding: 10px;
     text-transform: uppercase;
     font-weight: bold;
     background-Color: navy;
